test/deprecated/error-msg-removed.good
error-msg-removed.chpl:1: error: Error initializer accepting a string is no longer available
