test/deprecated/error-msg-removed.chpl
var x = new Error("error message");
delete x;
